# drk2

./: .gitignore  Android.mk  Cargo.toml  README.md  bindings.rs  build.rs  cargo-config.toml  deploy-android.sh  deploy.sh  index.html  notes.txt  pack.sh  resize.sh  resize.ts  take2.sh  take2.ts  wrapper.h
examples/: convert_svgs.rs  pack_texture.rs  run_the_game.rs  write_bindgen.rs  write_img_consts.rs
resources/: img_data.json
src/: blocks.rs  calc_dot_drop_dist.rs  calc_dots_to_drop.rs  check_level_change.rs  cmd.rs  colors.rs  dot.rs  draw_app.rs  draw_game.rs  draw_grid.rs  draw_menus.rs  easings.rs  game_state.rs  gen_buttons.rs  get_dots_to_drop.rs  get_indexes_to_remove.rs  globals.rs  handle_cmds.rs  handle_events.rs  handle_keydown.rs  handle_keyup.rs  handle_mousedown.rs  handle_mouseup.rs  img_consts.rs  keyboard.rs  lib.rs  load_save_settings.rs  main.rs  msg.rs  my_sdl.rs  my_sdl_rect.rs  mybindings.rs  number_images.rs  piece.rs  piece_landed.rs  pos.rs  process_events.rs  process_touches.rs  random_scenario.rs  save_settings.rs  (+3 more)
