[package]
name = "drrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathfinding = "4.2.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"

[build-dependencies]
os_info = "3.7.0"
regex = "1.7.3"
bindgen = "0.64.0"
cc = { version = "1.0.79", features = ["parallel"] }

[dev-dependencies]
texture_packer = "0.25.0"
image = { version = "0.24.6" }
glob = "0.3.1"