[package]
name = "drrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
os_info = "3.7.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
rand = "0.8.5"

[build-dependencies]
os_info = "3.7.0"
regex = "1.7.3"

[dev-dependencies]
bindgen = "0.69.1"
texture_packer = "0.27.0"
image = { version = "0.24.7" }
glob = "0.3.1"

[lib]
crate-type = ["lib", "staticlib"]

